--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <!-- Campo del número de empleado -->
             <label for="employeeNumber">Número de empleado</label>
             <input
-                type="number"
-                id="employeeNumber"
-                name="employeeNumber"
+                type="Username"
+                id="username"
+                name="Username"
                 placeholder="Ejemplo: 12"
                 required
             />
