--- a/registrar_salida/registrar_salida.html
+++ b/registrar_salida/registrar_salida.html
@@ -9,14 +9,13 @@
 <body>
   <div class="check-wrapper">
 
-    <!-- Header -->
+    <div>
     <header class="header entrada-header">
       <h1>SALIDA</h1>
-    </header>
-
-    <!-- Logo -->
-    <div class="logo">
+       <div class="logo">
       <img src="logo.png" alt="TimeSnap" />
+    </div>
+    </header>
     </div>
 
     <p class="instruction">
