--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <!-- Campo del número de empleado -->
             <label for="employeeNumber">Número de empleado</label>
             <input
-                type="Username"
-                id="username"
-                name="Username"
+                type="text"
+                id="employeeNumber"
+                name="employeeNumber"
                 placeholder="Ejemplo: 12"
                 required
             />
@@ -42,6 +42,9 @@
                 Iniciar sesión
             </button>
         </form>
+
+        <!-- Área de mensajes -->
+        <div id="message-display" class="hidden"></div>
     </div>
 
     <!-- Cargar el archivo JavaScript -->
