ahora voy por el backend del administrador

--- a/dashboardweb/web.html
+++ b/dashboardweb/web.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TimeSnap - Lista de Empleados</title>
+  <link rel="stylesheet" href="../global.css">
   <link rel="stylesheet" href="web.css">
 </head>
 <body>
@@ -17,6 +18,7 @@
 
   <!-- Acciones -->
   <div class="actions">
+    <button onclick="window.location.href='../registrosweb/registrar.html'">👤 Registrar Empleado</button>
     <button id="deleteSelected">🗑️ Delete</button>
     <button id="filterBtn">⚙️ Filtros</button>
   </div>
