--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TimeSnap - Perfil</title>
+    <link rel="stylesheet" href="../global.css">
     <link rel="stylesheet" href="dashboard.css">
 </head>
 <body>
 
     <div class="card">
-        <div class="header">   
+        <div class="header">
             <div class="profile-pic"></div>
             <img src="logo.png" class="logo" alt="TimeSnap">
+            <button onclick="logout()" style="position: absolute; top: 10px; right: 10px; background: #dc3545; color: white; border: none; padding: 5px 10px; border-radius: 4px; cursor: pointer;">Cerrar Sesión</button>
         </div>
         <div class="info-container">
             <div class="column-left">
@@ -35,8 +37,8 @@
         </div>
 
         <div class="buttons">
-            <button class="entrada" onclick="checkIn()">Checar entrada</button>
-            <button class="salida" onclick="checkOut()">Checar salida</button>
+            <button class="entrada" onclick="window.location.href='../registrar_entrada/registrar_entrada.html'">Checar entrada</button>
+            <button class="salida" onclick="window.location.href='../registrar_salida/registrar_salida.html'">Checar salida</button>
         </div>
     </div>
 
