--- a/registrosweb/registrar.html
+++ b/registrosweb/registrar.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registrar Empleado</title>
+  <link rel="stylesheet" href="../global.css">
   <link rel="stylesheet" href="registrar.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
     </div>
     <h1 style="color:white;">Registrar Empleado</h1>
     <div class="actions">
-        <button onclick="window.location.href='empleados.html'"> Volver</button>
+        <button onclick="window.location.href='../dashboardweb/web.html'"> Volver</button>
     </div>
 </header>
 
@@ -22,9 +23,12 @@
 
   <!-- IZQUIERDA: Foto -->
   <div class="photo-section">
-      <img id="preview" class="preview" src="assets/user-default.png" alt="Foto de perfil">
-      <input type="file" id="photoInput" accept="image/*">
-      
+      <div class="camera-container">
+          <video id="video" autoplay playsinline style="width: 100%; height: 180px; object-fit: cover; border-radius: 8px; background: #000;"></video>
+          <canvas id="canvas" style="display: none;"></canvas>
+      </div>
+      <button type="button" id="btnTakePhoto" style="margin-top: 10px; padding: 8px 16px; background: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer;">📸 Tomar Foto</button>
+      <img id="preview" class="preview" src="assets/user-default.png" alt="Foto de perfil" style="display: none;">
   </div>
 
   <!-- DERECHA: Formulario -->
@@ -90,6 +94,47 @@
   </form>
 
 </div>
+
+<!-- Face API Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2/dist/face-api.min.js"></script>
+<script>
+  // Cargar modelos de face-api.js
+  async function loadModels() {
+    try {
+      // Intentar con diferentes URLs de modelos
+      const urls = [
+        'https://cdn.jsdelivr.net/npm/face-api.js@0.22.2/weights/',
+        'https://cdn.jsdelivr.net/npm/@vladmandic/face-api@1.2.0/model/',
+        'https://raw.githubusercontent.com/justadudewhohacks/face-api.js/master/weights/'
+      ];
+
+      for (const baseUrl of urls) {
+        try {
+          console.log('Intentando cargar modelos desde:', baseUrl);
+          await Promise.all([
+            faceapi.nets.tinyFaceDetector.loadFromUri(baseUrl),
+            faceapi.nets.faceLandmark68Net.loadFromUri(baseUrl),
+            faceapi.nets.faceRecognitionNet.loadFromUri(baseUrl)
+          ]);
+          console.log('✅ Modelos de face-api.js cargados exitosamente desde:', baseUrl);
+          return true;
+        } catch (urlError) {
+          console.warn('URL falló:', baseUrl, urlError);
+          continue;
+        }
+      }
+
+      console.error('❌ No se pudieron cargar los modelos desde ninguna URL');
+      return false;
+    } catch (error) {
+      console.error('❌ Error cargando modelos de face-api.js:', error);
+      return false;
+    }
+  }
+
+  // Iniciar carga de modelos
+  loadModels();
+</script>
 
 <script src="registrar.js"></script>
 </body>
