ya esta full terminado creo

--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -13,7 +13,7 @@
         <div class="header">
             <div class="profile-pic"></div>
             <img src="logo.png" class="logo" alt="TimeSnap">
-            <button onclick="logout()" style="position: absolute; top: 10px; right: 10px; background: #dc3545; color: white; border: none; padding: 5px 10px; border-radius: 4px; cursor: pointer;">Cerrar Sesión</button>
+            <button onclick="logout()" style="position: absolute; top: 25px; left: 200px; background: #dc3545; color: white; border: none; padding: 5px 10px; border-radius: 4px; cursor: pointer;">Cerrar Sesión</button>
         </div>
         <div class="info-container">
             <div class="column-left">
