--- a/registrar_entrada/registrar_entrada.html
+++ b/registrar_entrada/registrar_entrada.html
@@ -52,6 +52,10 @@
         <button class="btn-red" id="btnCancel">Cancelar</button>
         <button class="btn-green2" id="btnConfirm">Confirmar</button>
       </div>
+
+      <div class="back-button">
+        <button class="btn-blue" onclick="window.location.href='../Dashboard/dashboard.html'">Volver a Inicio</button>
+      </div>
     </div>
   </div>
 
