--- a/registrar_salida/registrar_salida.html
+++ b/registrar_salida/registrar_salida.html
@@ -10,13 +10,14 @@
 <body>
   <div class="check-wrapper">
 
-    <div>
+    <!-- Header -->
     <header class="header entrada-header">
       <h1>SALIDA</h1>
-       <div class="logo">
-      <img src="logo.png" alt="TimeSnap" />
-    </div>
     </header>
+
+    <!-- Logo -->
+    <div class="logo">
+      <img src="logo.png" alt="TimeSnap" />
     </div>
 
     <p class="instruction">
@@ -50,6 +51,10 @@
       <div class="confirm-buttons">
         <button class="btn-red" id="btnCancel">Cancelar</button>
         <button class="btn-green2" id="btnConfirm">Confirmar</button>
+      </div>
+
+      <div class="back-button">
+        <button class="btn-blue" onclick="window.location.href='../Dashboard/dashboard.html'">Volver a Inicio</button>
       </div>
     </div>
   </div>
