--- a/registrosweb/registrar.html
+++ b/registrosweb/registrar.html
@@ -50,6 +50,11 @@
       </div>
 
       <div class="form-group">
+          <label>Contraseña</label>
+          <input type="password" id="contrasena">
+      </div>
+
+      <div class="form-group">
           <label>Sucursal</label>
           <select id="sucursal">
             <option value="">Selecciona una</option>
